:bug: Various setup issues